--- a/web/src/app/components/home/home.component.html
+++ b/web/src/app/components/home/home.component.html
@@ -1,52 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fab fa-facebook fa-2x" > </i></a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fab fa-twitter fa-2x"> </i></a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fab fa-instagram fa-2x"> </i></a>
-                
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fab fa-linkedin-in fa-2x"> </i></a>  
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <img src="../../../assets/6.png" class="rounded float-start" alt="..." width="100" height="100">
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">¿Por qué reciclar?</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">¿Qué podemos reciclar?</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Reclicjae en Bogotá</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Reciclaje de cartón</a>
-            </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<br>
+<app-navbar></app-navbar>
 <div class="container">
     <div class="row">
         <div class="col">
             <!-- aqui empieza el carousel-->
             <img src="../../../assets/6.png" alt="responsive image">   
+            <app-carousel></app-carousel>
             <!-- aqui acab ael carousel -->      
         </div>
         <div class="col">
@@ -67,3 +25,5 @@
         </div>            
     </div>
 </div>
+
+<app-footer></app-footer>
