footer y dos items en desarrollo :penguin:

--- a/web/src/app/components/whatrecycling/whatrecycling.component.html
+++ b/web/src/app/components/whatrecycling/whatrecycling.component.html
@@ -1,2 +1,142 @@
 <app-navbar></app-navbar>
-<p>whatrecycling works!</p>
+
+<div class="container text-center text-md-start mt-6">
+    <div class="row mt-3">
+        <div class="col-md-3 col-lg-4 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/carton.jpeg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Cartón</h5>
+                  <p class="card-text">Cajas de electrodomésticos, de alimentos como la pizza, donde ponemos nuestro mercado
+                       o el carton donde vienen los huevos, son ejemplos del carton de nuestro hogar.
+                  </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/botellas.jpg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Plástico</h5>
+                  <p class="card-text">Las botellas de bebidas, tarros de guardado de comida, bolsas de mercado, son algunos ejemplos que podemos 
+                       encontrar en nuestros hogares.
+                  </p>
+                </div>
+            </div>
+        </div>  
+        <div class="col-md-4 col-lg-3 col-xl-4 mx-auto mb-md-0 mb-4">
+            <div class="card">
+                <img src="../../../assets/papel.jpg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Papel</h5>
+                  <p class="card-text">Los documentos viejos, revistas , algunos libros sin uso, o en general documentos que dejamos de usar que provengan
+                       de oficinas o documentos educati vos, son ejemplos de papel en nuestro hogar.
+                  </p>
+                </div>
+            </div>  
+        </div>
+    </div>
+</div>
+
+<div class="container text-center text-md-start mt-6">
+    <div class="row mt-3">
+        <div class="col-md-3 col-lg-4 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/madera.jpg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Madera</h5>
+                  <p class="card-text">Encontramos madera en tipos de muebles viejos o en desuso, camas, sofas, armarios, muebles de sala,
+                       mesas, son algunos ejemplos de madera reciclabe en nuestro hogar.
+                  </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/vidrio.jpeg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Vidrio</h5>
+                  <p class="card-text">Botellas de vidrio de bebidas, espejos de baño, es  pejos como accesorios de maquillaje, son algunos ejemplos de vidrio que podemos
+                       encontrar en nuestro hogar.
+                  </p>
+                </div>
+            </div>
+        </div>  
+        <div class="col-md-4 col-lg-3 col-xl-4 mx-auto mb-md-0 mb-4">
+            <div class="card">
+                <img src="../../../assets/organicos.jpg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Residuos Orgánicos</h5>
+                  <p class="card-text">Generalmente se encuentran en las cascaras de comi da o en las ingredientes que olvidamos preparar
+                       o co midas prep-reparadas que olvidamos, son ejemplos de residuos orgánicos en nuestro hogar.
+                  </p>
+                </div>
+            </div>  
+        </div>
+    </div>
+</div>
+<div class="container text-center text-md-start mt-6">
+    <div class="row mt-3">
+        <div class="col-md-3 col-lg-4 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/prendas.jpg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/tetra.jpeg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>  
+        <div class="col-md-4 col-lg-3 col-xl-4 mx-auto mb-md-0 mb-4">
+            <div class="card">
+                <img src="../../../assets/pilas.jpeg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+            </div>  
+        </div>
+    </div>
+</div>
+<div class="container text-center text-md-start mt-6">
+    <div class="row mt-3">
+        <div class="col-md-3 col-lg-4 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/latas.jpg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/electro.png" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>  
+        <div class="col-md-4 col-lg-3 col-xl-4 mx-auto mb-md-0 mb-4">
+            <div class="card">
+                <img src="../../../assets/acero.jpeg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+            </div>  
+        </div>
+    </div>
+</div>
+
+
+<app-footer></app-footer>
