--- a/web/src/app/components/whyrecycling/whyrecycling.component.html
+++ b/web/src/app/components/whyrecycling/whyrecycling.component.html
@@ -1,2 +1,34 @@
 <app-navbar></app-navbar>
-<p>whyrecycling works!</p>
+<div class ="container">
+    <div class="card">
+        <h4 class="card-header">¿Por qué es importante reciclar?</h4>
+        <div class="card-body">
+            <br>
+            <h5 class="card-title">Una tarea que salva al planeta</h5>
+                <p class="card-text">Si bien reciclar es una iniciativa muy apoyada actualmente, 
+                se suele conocer muy poco al respecto de las variedad de beneficios que genera el reciclaje,
+                entre los cuales se encuentran:</p>
+
+                <ul>
+                    <li>Se reduce el consumo de energía, dado que se reduce la producción de materia prima,
+                     su transporte y extracción. </li>
+                     <br>
+                    <li>Se genera una reducción en la producción CO2, por ejemplo con la reducción del consumo
+                     de energía se reduce la producción de CO2, además cuando se reduce la deforestación se aumenta
+                     la capacidad de captación de este mismo gas, por lo que hay menos contaminación en el aire por lo
+                     que se mejora la salud de las personas.</li>
+                     <br>
+                    <li>Se fomenta la creación de productos a partir del material reciclado. </li>
+                    <br>
+                    <li>Aumentar el volumen de material reciclado va a influir en la cantidad de personas que se
+                     necesitan involucrar en el proceso de reciclaje por lo que aumentará la oferta de empleo. </li>
+                     <br>
+                    <li>Se reduce la cantidad de residuos que ingresan a los vertederos, lo que puede ayudar a reducir
+                     los problemas de salubridad que se generan en estos sitios. </li>
+                </ul>             
+        </div>
+    </div>
+</div>
+<br>
+
+<app-footer></app-footer>
