--- a/web/src/app/components/footer/footer.component.html
+++ b/web/src/app/components/footer/footer.component.html
@@ -1,1 +1,57 @@
-<p>footer works!</p>
+<footer class="text-center text-lg-start bg-light text-muted">
+        <br>
+      <div class="container text-center text-md-start mt-6">
+        <!-- Grid row -->
+        <div class="row mt-3">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <!-- Content -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fas fa-gem me-3"></i>Unboxing Bogotá
+            </h6>
+            <p>
+              Somos un proyecto en focado en la recoleccion oportuna de residuos de carton,
+              promoviendo la separacion en la fuente como nuestra bandera principal.    
+            </p>
+          </div>
+          <!-- Grid column -->  
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-3     mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Servicios
+            </h6>
+            <p><a class="text-reset">Encuentre su punto de recolección</a></p>
+            <p><a class="text-reset">Recolección en conjuntos</a></p>
+            <p><a class="text-reset">Recoleccion en conjuntos</a></p>
+            <p><a class="text-reset">Recoleccion en conjuntos</a></p>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Contactenos
+            </h6>
+            <p><i class="fas fa-home me-3"></i>Carrera 45 # 26-85</p>
+            <p>
+              <i class="fas fa-envelope me-3"></i>
+              diracasede_bog@unal.edu.co
+            </p>
+            <p><i class="fas fa-phone me-3"></i> (+57 1) 316 5000</p>
+            <p><i class="fas fa-print me-3"></i> (+57 1) 316 5000</p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    <!-- Copyright -->
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        © 2021 Copyright:
+        <a class="text-reset fw-bold">Unboxing</a>
+      </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
+
