--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -3,17 +3,17 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                <a class="nav-link"><i class="fab fa-facebook fa-2x" > </i></a>
+                <a class="nav-link" routerLink="www.facebook.com/"><i class="fab fa-facebook fa-2x" > </i></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link"><i class="fab fa-twitter fa-2x"> </i></a>
+                <a class="nav-link" routerLink="www.twitter.com/"><i class="fab fa-twitter fa-2x"> </i></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link"><i class="fab fa-instagram fa-2x"> </i></a>
+                <a class="nav-link" routerLink="www.instagram.com/"><i class="fab fa-instagram fa-2x"> </i></a>
                 
                 </li>
                 <li class="nav-item">
-                <a class="nav-link"><i class="fab fa-linkedin-in fa-2x"> </i></a>  
+                <a class="nav-link" routerLink="www.linkedin.com/"><i class="fab fa-linkedin-in fa-2x"> </i></a>  
                 </li>
             </ul>
         </div>
