dos segmentos completos y features de home :penguin:

--- a/web/src/app/components/bogotarecycling/bogotarecycling.component.html
+++ b/web/src/app/components/bogotarecycling/bogotarecycling.component.html
@@ -1,2 +1,6 @@
 <app-navbar></app-navbar>
-<p>bogotarecycling works!</p>
+<div class="container">
+    <p>bogotarecycling works!</p>
+</div>
+
+<app-footer></app-footer>
