--- a/web/src/app/components/whatrecycling/whatrecycling.component.html
+++ b/web/src/app/components/whatrecycling/whatrecycling.component.html
@@ -7,7 +7,7 @@
                 <img src="../../../assets/carton.jpeg" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
                   <h5 class="card-title">Cartón</h5>
-                  <p class="card-text">Cajas de electrodomésticos, de alimentos como la pizza, donde ponemos nuestro mercado
+                  <p class="card-text" align = "justify">Cajas de electrodomésticos, de alimentos como la pizza, donde ponemos nuestro mercado
                        o el carton donde vienen los huevos, son ejemplos del carton de nuestro hogar.
                   </p>
                 </div>
@@ -18,7 +18,7 @@
                 <img src="../../../assets/botellas.jpg" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
                   <h5 class="card-title">Plástico</h5>
-                  <p class="card-text">Las botellas de bebidas, tarros de guardado de comida, bolsas de mercado, son algunos ejemplos que podemos 
+                  <p class="card-text" align = "justify">Las botellas de bebidas, tarros de guardado de comida, bolsas de mercado, son algunos ejemplos que podemos 
                        encontrar en nuestros hogares.
                   </p>
                 </div>
@@ -29,7 +29,7 @@
                 <img src="../../../assets/papel.jpg" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
                   <h5 class="card-title">Papel</h5>
-                  <p class="card-text">Los documentos viejos, revistas , algunos libros sin uso, o en general documentos que dejamos de usar que provengan
+                  <p class="card-text" align = "justify">Los documentos viejos, revistas , algunos libros sin uso, o en general documentos que dejamos de usar que provengan
                        de oficinas o documentos educati vos, son ejemplos de papel en nuestro hogar.
                   </p>
                 </div>
@@ -45,7 +45,7 @@
                 <img src="../../../assets/madera.jpg" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
                   <h5 class="card-title">Madera</h5>
-                  <p class="card-text">Encontramos madera en tipos de muebles viejos o en desuso, camas, sofas, armarios, muebles de sala,
+                  <p class="card-text" align = "justify">Encontramos madera en tipos de muebles viejos o en desuso, camas, sofas, armarios, muebles de sala,
                        mesas, son algunos ejemplos de madera reciclabe en nuestro hogar.
                   </p>
                 </div>
@@ -56,7 +56,7 @@
                 <img src="../../../assets/vidrio.jpeg" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
                   <h5 class="card-title">Vidrio</h5>
-                  <p class="card-text">Botellas de vidrio de bebidas, espejos de baño, es  pejos como accesorios de maquillaje, son algunos ejemplos de vidrio que podemos
+                  <p class="card-text" align = "justify">Botellas de vidrio de bebidas, espejos de baño, es  pejos como accesorios de maquillaje, son algunos ejemplos de vidrio que podemos
                        encontrar en nuestro hogar.
                   </p>
                 </div>
@@ -67,7 +67,7 @@
                 <img src="../../../assets/organicos.jpg" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
                   <h5 class="card-title">Residuos Orgánicos</h5>
-                  <p class="card-text">Generalmente se encuentran en las cascaras de comi da o en las ingredientes que olvidamos preparar
+                  <p class="card-text" align = "justify">Generalmente se encuentran en las cascaras de comi da o en las ingredientes que olvidamos preparar
                        o co midas prep-reparadas que olvidamos, son ejemplos de residuos orgánicos en nuestro hogar.
                   </p>
                 </div>
@@ -81,8 +81,10 @@
             <div class="card">
                 <img src="../../../assets/prendas.jpg" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Prendas de vestir</h5>
+                  <p class="card-text" align = "justify">Son los textiles que han dejado de usarse por su con dición u estado, es deseable que esta trate en lo posi ble
+                      de darse una segunda vita util, antes de conside rarse reciclaje deben considerarse las condiciones donde la prenda no cumpla con su objetivo
+                  </p>
                 </div>
             </div>
         </div>
@@ -90,8 +92,10 @@
             <div class="card">
                 <img src="../../../assets/tetra.jpeg" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Tetrapack</h5>
+                  <p class="card-text" align = "justify">El tetra pack es un tipo de carton pero su proceso de aprovechamiento es diferente al cartón normal,
+                      po demos encontrar algunas bebidas en estos empa  ques en nuesro hogar.
+                  </p>
                 </div>
             </div>
         </div>  
@@ -99,8 +103,10 @@
             <div class="card">
                 <img src="../../../assets/pilas.jpeg" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Pilas y Baterias</h5>
+                  <p class="card-text" align = "justify">Podemos encontrar estos residuos cuando acaben su vida util en electrodomésticos que usualmente no 
+                      posean una conexión permanente a enegia electrica en nuestro hogar.
+                  </p>
                 </div>
             </div>  
         </div>
@@ -112,8 +118,10 @@
             <div class="card">
                 <img src="../../../assets/latas.jpg" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Latas de Aluminio</h5>
+                  <p class="card-text" align = "justify">En este tipo de envase podemos encontrar bebidas, como el aluminio es un material bastante usado
+                       se recomienda que estos productos sean comprimidos antes de poder aprovecharse para que asi su proceso de secado y procesado sea mas rapido.
+                  </p>
                 </div>
             </div>
         </div>
@@ -121,8 +129,10 @@
             <div class="card">
                 <img src="../../../assets/electro.png" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Electrodomésticos</h5>
+                  <p class="card-text" align = "justify">Debido al tamaño o peso de la mayoria de estos residuos, y partes que lo componen debe hacerse en puntos especializados donde se 
+                      aproveche al ma ximo este tipo de obejtos al cabo de su vida util.
+                  </p>
                 </div>
             </div>
         </div>  
@@ -130,8 +140,10 @@
             <div class="card">
                 <img src="../../../assets/acero.jpeg" class="card-img-top" alt="..." width="350" height="225">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Acero</h5>
+                  <p class="card-text" align = "justify">En esta categoria entra tambien lo que conocemos como chatarra, que son basicamente partes metá licas que se pueden aprovechar 
+                      pues han acabado su vida util, o ya no es posible que la cumplan por su estado.
+                  </p>
                 </div>
             </div>  
         </div>
