--- a/web/src/app/components/whyrecycling/whyrecycling.component.html
+++ b/web/src/app/components/whyrecycling/whyrecycling.component.html
@@ -2,10 +2,11 @@
 <div class ="container">
     <div class="card">
         <h4 class="card-header">¿Por qué es importante reciclar?</h4>
-        <div class="card-body">
+        <div class="card-body" align = "justify">
             <br>
             <h5 class="card-title">Una tarea que salva al planeta</h5>
-                <p class="card-text">Si bien reciclar es una iniciativa muy apoyada actualmente, 
+            <br>
+                <p class="card-text" >Si bien reciclar es una iniciativa muy apoyada actualmente, 
                 se suele conocer muy poco al respecto de las variedad de beneficios que genera el reciclaje,
                 entre los cuales se encuentran:</p>
 
@@ -25,7 +26,13 @@
                      <br>
                     <li>Se reduce la cantidad de residuos que ingresan a los vertederos, lo que puede ayudar a reducir
                      los problemas de salubridad que se generan en estos sitios. </li>
-                </ul>             
+                </ul>     
+                <br>
+                <h5 class="card-title">Una buena práctica de reciclaje</h5>
+                <br>
+                <p class="card-text">Las recomendaciones principales al momento de separar residuos en la fuente es que estos
+                    esten secos y limpios.
+                </p>
         </div>
     </div>
 </div>
