parte de bogota recycling casi terminada :penguin:

--- a/web/src/app/components/bogotarecycling/bogotarecycling.component.html
+++ b/web/src/app/components/bogotarecycling/bogotarecycling.component.html
@@ -1,6 +1,51 @@
 <app-navbar></app-navbar>
 <div class="container">
-    <p>bogotarecycling works!</p>
+        
+    <br>
+    <div class="container">
+        <div class="container">
+            <div class="container">
+                <img src="../../../assets/codigo.jpeg" class="card-img-top" alt="..." width="575" height="530">
+                <I>Figura: Código nacional de separación de colores, tomado de Minambiente. </I>
+                <br>
+                <br>
+                <h5 class="card-title">¿Cómo se recicla en Bogotá?</h5>
+                <br>
+                <p class="card-text" align = "justify">
+                    Actualmente en Colombia, se ha implementado un nuevo código de colores con el que se espera que la gente pueda realizar una mejor separación en la fuente y mejorar el proceso de separación de residuos. 
+                </p>
+                <p class="card-text" align = "justify">
+                    Se utilizan las bolsas negras para los residuos que no son aprovechables tales como: papel higiénico usado, servilletas usadas, papeles y cartones sucios o contaminados con comida, grasas, líquidos u otras sustancias; papeles metalizados y restos de alimentos cocidos. También irán residuos de protección del covid-19 como los tapabocas, guantes, etc.
+                </p>
+                <p class="card-text" align = "justify">
+                    Se utilizan bolsas blancas para residuos reutilizables tales como:  plástico, vidrio, metales, papel y cartón. Es imprescindible entregar los materiales limpios, sin cunchos, secos y sin grasas o sustancias líquidas.
+                </p>
+                <p class="card-text" align = "justify">
+                    Se utilizan las bolsas verdes para productos orgánicos aprovechables: estos de comida cruda y desechos agrícolas que podrán ser aprovechados como abono orgánico o compost.
+                </p>
+                <a href="https://www.minambiente.gov.co/index.php/noticias/4595-gobierno-unifica-el-codigo-de-colores-para-la-separacion-de-residuos-en-la-fuente-a-nivel-nacional" target="_blank">Proyecto ministerio de Ambiente</a>
+                <br>
+                <br>
+                <br>
+                <h5 class="card-title">Residuos especiales en Bogotá</h5>
+                <br>
+                <div>
+                    <div class="row">
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                            <img src="../../../assets/roja.jpg" class="card-img-top" alt="..." width="  " height="180">
+                        </div>
+                        <div class="col">
+                            <p class="card-text" align = "justify">
+                                poner lo de las canastas de hospital y residuos peligrosos 
+                            </p>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>  
+    </div>
+    
 </div>
-
+<br>
 <app-footer></app-footer>
