--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -22,7 +22,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <img src="../../../assets/6.png" class="rounded float-start" alt="..." width="100" height="100" routerLink="">
+        <img src="../../../assets/unboxing.png" class="rounded float-start" alt="..." width="100" height="100" routerLink="">
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
             <li class="nav-item">
