--- a/web/src/app/components/whatrecycling/whatrecycling.component.html
+++ b/web/src/app/components/whatrecycling/whatrecycling.component.html
@@ -1,6 +1,8 @@
 <app-navbar></app-navbar>
 
 <div class="container text-center text-md-start mt-6">
+    <h4>Materiales que podemos aprovechar de nuestro hogar</h4>
+    <br>
     <div class="row mt-3">
         <div class="col-md-3 col-lg-4 col-xl-4 mx-auto mb-4">
             <div class="card">
