carousel funcional fix de cdn de js de bootstrap :penguin:

--- a/web/src/app/components/footer/footer.component.html
+++ b/web/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="text-center text-lg-start bg-light text-muted">
+<footer class="text-center text-lg-start bg-company-gren1 text-white">
         <br>
       <div class="container text-center text-md-start mt-6">
         <!-- Grid row -->
@@ -47,7 +47,7 @@
         <!-- Grid row -->
       </div>
     <!-- Copyright -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    <div class="text-center p-4 " style="background-color: rgba(0, 0, 0, 0.05);">
         © 2021 Copyright:
         <a class="text-reset fw-bold">Unboxing</a>
       </div>
