--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-company-gren1">
     <div class="container-fluid">
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
@@ -20,22 +20,22 @@
     </div>
 </nav>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
+<nav class="navbar navbar-expand-lg navbar-light bg-company-gren1">
+    <div class="container ">
         <img src="../../../assets/unboxing.png" class="rounded float-start" alt="..." width="100" height="100" routerLink="">
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" routerLink="/whyrecycling">¿Por qué reciclar?</a>
+                <a class="nav-link active text-white" aria-current="page" routerLink="/whyrecycling">¿Por qué reciclar?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" routerLink="/whatrecycling">¿Qué podemos reciclar?</a>
+                <a class="nav-link active text-white" aria-current="page" routerLink="/whatrecycling">¿Qué podemos reciclar?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" routerLink="/bogotarecycling">Reciclaje en Bogotá</a>
+                <a class="nav-link active text-white" aria-current="page" routerLink="/bogotarecycling">Reciclaje en Bogotá</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" routerLink="/cartonrecycling">Reciclaje de cartón</a>
+                <a class="nav-link active text-white" aria-current="page" routerLink="/cartonrecycling">Reciclaje de cartón</a>
             </li>
             </ul>
         </div>
