--- a/web/src/app/components/home/home.component.html
+++ b/web/src/app/components/home/home.component.html
@@ -1,11 +1,9 @@
 <app-navbar></app-navbar>
 <div class="container">
+    <div class="row">here we are :v</div>
     <div class="row">
         <div class="col">
-            <!-- aqui empieza el carousel-->
-            <img src="../../../assets/6.png" alt="responsive image">   
-            <app-carousel></app-carousel>
-            <!-- aqui acab ael carousel -->      
+            <app-carousel></app-carousel>    
         </div>
         <div class="col">
             <div class="card">
