integracion de first commit python backend y frontend:penguin:

--- a/web/src/app/components/carousel/carousel.component.html
+++ b/web/src/app/components/carousel/carousel.component.html
@@ -3,16 +3,24 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../../../assets/1.jpg" class="d-block w-100" alt="..." width="570" height="320">
+      <img src="../../../assets/carton1.jpg" class="d-block w-100" alt="carton1" width="1120" height="640">
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/2.jpeg" class="d-block w-100" alt="..." width="570" height="320">
+      <img src="../../../assets/carton2.jpg" class="d-block w-100" alt="carton2" width="1120" height="640">
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/5.jpg" class="d-block w-100" alt="..." width="570" height="320">
+      <img src="../../../assets/carton1.jpg" class="d-block w-100" alt="carton3" width="1120" height="640">
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/carton4.jpg" class="d-block w-100" alt="carton4" width="1120" height="640">
+    </div>
+    <div class="carousel-item">
+      <img src="../../../assets/youth-for-climat.jpg" class="d-block w-100" alt="youth" width="1120" height="640">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
