--- a/web/src/app/components/footer/footer.component.html
+++ b/web/src/app/components/footer/footer.component.html
@@ -9,9 +9,9 @@
             <h6 class="text-uppercase fw-bold mb-4">
               <i class="fas fa-gem me-3"></i>Unboxing Bogotá
             </h6>
-            <p>
+            <p align = "justify">
               Somos un proyecto en focado en la recoleccion oportuna de residuos de carton,
-              promoviendo la separacion en la fuente como nuestra bandera principal.    
+              promoviendo la correcta sepa ración en la fuente como nuestra bandera principal.    
             </p>
           </div>
           <!-- Grid column -->  
@@ -21,10 +21,10 @@
             <h6 class="text-uppercase fw-bold mb-4">
               Servicios
             </h6>
-            <p><a class="text-reset">Encuentre su punto de recolección</a></p>
-            <p><a class="text-reset">Recolección en conjuntos</a></p>
-            <p><a class="text-reset">Recoleccion en conjuntos</a></p>
-            <p><a class="text-reset">Recoleccion en conjuntos</a></p>
+            <p>Vinculese a un conjunto cerca a usted</p>
+            <p>Vincule un recolector a su conjunto</p>
+            <p>Revise sus horarios de recolección</p>
+            <p>Recoleccion de residuos</p>
           </div>
           <!-- Grid column -->
   
