--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -22,20 +22,20 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-company-gren1">
     <div class="container ">
-        <img src="../../../assets/unboxing.png" class="rounded float-start" alt="..." width="100" height="100" routerLink="">
+        <img src="../../../assets/unboxing.png" class="rounded float-start" alt="..." width="100" height="80" routerLink="">
         <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" routerLink="/whyrecycling">¿Por qué reciclar?</a>
+                <a class="nav-link active text-white font" aria-current="page" routerLink="/whyrecycling" >¿Por qué reciclar?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" routerLink="/whatrecycling">¿Qué podemos reciclar?</a>
+                <a class="nav-link active text-white font" aria-current="page" routerLink="/whatrecycling">¿Qué podemos reciclar?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" routerLink="/bogotarecycling">Reciclaje en Bogotá</a>
+                <a class="nav-link active text-white font" aria-current="page" routerLink="/bogotarecycling">Reciclaje en Bogotá</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" routerLink="/cartonrecycling">Reciclaje de cartón</a>
+                <a class="nav-link active text-white font" aria-current="page" routerLink="/cartonrecycling">Reciclaje de cartón</a>
             </li>
             </ul>
         </div>
