push de los 4 modulos completos arraglados antes de login registro :penguin:

--- a/web/src/app/components/bogotarecycling/bogotarecycling.component.html
+++ b/web/src/app/components/bogotarecycling/bogotarecycling.component.html
@@ -36,10 +36,30 @@
                         </div>
                         <div class="col">
                             <p class="card-text" align = "justify">
-                                poner lo de las canastas de hospital y residuos peligrosos 
-                            </p>
-                            
+                                EL tarro de disposicion de residuos rojo se considera parte del punto ecologico, es comunmente visto en 
+                                centros de salud, pero este tiene varios usos, no solo se enfoca en la parte de la medicina.
+                            </p>   
+                            <div class="row">
+                                <div class="col">
+                                    <ul class="list-group list-group-numbered">
+                                    <li class="list-group-item bg-cont">Residuales: de trabajo minero</li>
+                                    <li class="list-group-item bg-cont">Infecciosos: Hospitalarios</li>
+                                    <li class="list-group-item bg-cont">Aceitosos: Aceites y derivados</li>
+                                    <li class="list-group-item bg-cont">Organicos: solventes, pintures entre otros</li>
+                                    
+                                    </ul>                         
+                                </div>
+                                <div class="col">
+                                    <ul class="list-group">
+                                    <li class="list-group-item bg-cont">5. Tóxicos: plaguicidas</li>
+                                    <li class="list-group-item bg-cont">6. Liquidos inflamables: alcoholes, gasolina entre otros</li>
+                                    <li class="list-group-item bg-cont">7. Inorganicos: quimicos, acidos entre otros</li>
+                                    <li class="list-group-item bg-cont">8. Explosivos: materiales que lo componen</li>
+                                    </ul>                         
+                                </div>
+                            </div>                        
                         </div>
+                        
                     </div>
                 </div>
             </div>
