--- a/web/src/app/components/cartonrecycling/cartonrecycling.component.html
+++ b/web/src/app/components/cartonrecycling/cartonrecycling.component.html
@@ -1,7 +1,63 @@
 <app-navbar></app-navbar>
 <div class="container">
-<p>cartonrecycling works!</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+    <br>
+    <h4>El aprovechamiento de cartón</h4>
+    <div class="row">
+        <div class="col">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+        </div>
+        <div class="col">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+        </div>
+        <br>
+    </div>
+<br>
+    <h4>Empresas que utilizan carton 100% reciclado en su proceso de manufacctura y producción</h4>
+    <div class="row">
+        <div class="col col-lg-4 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/corrugados.png" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                <h6 class="card-title">Corrugados de Colombia</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/papelsa.jpg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                <h6 class="card-title">Papelsa</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/indugevi.jpg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                <h6 class="card-title">Indugevi</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/kappa.jpg" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                <h6 class="card-title">Smurfit kappa</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col mx-auto mb-4">
+            <div class="card">
+                <img src="../../../assets/mundo.png" class="card-img-top" alt="..." width="350" height="225">
+                <div class="card-body">
+                <h6 class="card-title">Mundo papel de Colombia</h6>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 
 <app-footer></app-footer>
