--- a/web/src/app/components/carousel/carousel.component.html
+++ b/web/src/app/components/carousel/carousel.component.html
@@ -8,19 +8,19 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../../../assets/carton1.jpg" class="d-block w-100" alt="carton1" width="1120" height="640">
+      <img src="../../../assets/carton1.jpg" class="d-block w-100" alt="carton1" width="1080" height="720">
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/carton2.jpg" class="d-block w-100" alt="carton2" width="1120" height="640">
+      <img src="../../../assets/carton2.jpg" class="d-block w-100" alt="carton2" width="1080" height="720">
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/carton1.jpg" class="d-block w-100" alt="carton3" width="1120" height="640">
+      <img src="../../../assets/cc.jpg" class="d-block w-100" alt="carton3" width="1080" height="720">
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/carton4.jpg" class="d-block w-100" alt="carton4" width="1120" height="640">
+      <img src="../../../assets/carton4.jpg" class="d-block w-100" alt="carton4" width="1080" height="720">
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/youth-for-climat.jpg" class="d-block w-100" alt="youth" width="1120" height="640">
+      <img src="../../../assets/youth-for-climat.jpg" class="d-block w-100" alt="youth" width="1080" height="720">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
