--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -3,17 +3,17 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                <a class="nav-link" routerLink="www.facebook.com/"><i class="fab fa-facebook fa-2x" > </i></a>
+                <a class="nav-link" target="_blank"  href="https://www.facebook.com"><i class="fab fa-facebook fa-2x" ></i></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" routerLink="www.twitter.com/"><i class="fab fa-twitter fa-2x"> </i></a>
+                <a class="nav-link" target=”_blank”  href="https://twitter.com"><i class="fab fa-twitter fa-2x"> </i></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" routerLink="www.instagram.com/"><i class="fab fa-instagram fa-2x"> </i></a>
+                <a class="nav-link" target=”_blank”  href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"> </i></a>
                 
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" routerLink="www.linkedin.com/"><i class="fab fa-linkedin-in fa-2x"> </i></a>  
+                <a class="nav-link" target=”_blank”  href="https://www.linkedin.com"><i class="fab fa-linkedin-in fa-2x"> </i></a>  
                 </li>
             </ul>
         </div>
@@ -22,7 +22,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-company-gren1">
     <div class="container ">
-        <img src="../../../assets/unboxing.png" class="rounded float-start" alt="..." width="100" height="80" routerLink="">
+        <img src="../../../assets/unboxing.png" class="rounded float-start" alt="..." width="100" height="80" target=”_blank”  routerLink="">
         <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -41,4 +41,3 @@
         </div>
     </div>
 </nav>
-<br>
