falta conexion de backend y frotnend pero las features estan diseñadas en un 80%:penguin:

--- a/web/src/app/components/cartonrecycling/cartonrecycling.component.html
+++ b/web/src/app/components/cartonrecycling/cartonrecycling.component.html
@@ -2,17 +2,18 @@
 <div class="container">
     <br>
     <h4>El aprovechamiento de cartón</h4>
+    <p>La mejor forma de aprovechar el cartón es dandole una segunda vida util uso he aqui unos ejemplos:</p>
     <div class="row">
         <div class="col">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ycvIonGDq3E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dDhlB9h1YAk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <br>
     </div>
 <br>
-    <h4>Empresas que utilizan carton 100% reciclado en su proceso de manufacctura y producción</h4>
+    <h4>Empresas que utilizan carton 100% reciclado como materia prima en sus procesos de manufactura y producción</h4>
     <div class="row">
         <div class="col col-lg-4 col-xl-4 mx-auto mb-4">
             <div class="card">
