--- a/web/src/app/components/profile/profile.component.html
+++ b/web/src/app/components/profile/profile.component.html
@@ -39,9 +39,12 @@
             </li>
             </ul>
         </div>
-            <div class="col col-6 col-sm-2">
-                <a class="btn btn-primary bg-btn" href="/login" role="button">Ingreso</a>
-                <a class="btn btn-primary bg-btn" href="/registro" role="button">registro</a>
-            </div>
+        
+        
+        <div class="col col-6 col-sm-2">
+            <i class="far fa-user-alt  fa-4x"></i>
+            Name recolector
+            <a class="btn btn-danger tn-sm" href="/" role="button">Cerrar sesion</a>
+        </div>
     </div>
 </nav>
