--- a/web/src/app/components/whyrecycling/whyrecycling.component.html
+++ b/web/src/app/components/whyrecycling/whyrecycling.component.html
@@ -2,7 +2,7 @@
 <br>
 <div class ="container">
     <div class="card">
-        <h4 class="card-header">¿Por qué es importante reciclar?</h4>
+        <h4 class="card-header bg-company-gren1 font">¿Por qué es importante reciclar?</h4>
         <div class="card-body" align = "justify">
             <br>
             <h5 class="card-title">Una tarea que salva al planeta</h5>
